fix: hide window buttons and align top bar spacing

--- a/MomotalkSource.theme.css
+++ b/MomotalkSource.theme.css
@@ -294,6 +294,10 @@
     bottom: 0;
 }
 
+.winButtons_c38106 {
+    display: none;
+}
+
 /* Hiding broken gradient in typing */
 .chatTypingGradientAtBottom__36d07.chatGradientBase__36d07 {
     display: none;
@@ -317,7 +321,7 @@
 .bar_c38106 {
     background-color: var(--momotalkbanner);
 
-    margin-right: 10px;
+    padding-right: 10px;
 
     /* the little discord icon as well as inbox and help */
     path {
@@ -968,7 +972,7 @@ html:not(.custom-theme-background) .searchBar_e6b769 {
     .bar_c38106 {
         background-color: var(--momotalkbannerLIGHT);
 
-        margin-right: 10px;
+        padding-right: 10px;
 
         /* the little discord icon as well as inbox and help */
         path {
